--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,5 +1,5 @@
 #app * {
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background-color: #2A2141 !important;
 }
 
@@ -9,32 +9,38 @@
   grid-template-areas:
   'A B'
   'A C';
-  gap: 32px;
+  gap: 3rem;
   place-content: center;
   
   height: 100vh;
-  margin-top: 55px;
-  
-  @media (max-width: 769px) {
-    grid-template-areas:
-    'A'
-    'B'
-    'C';
+  margin-top: 3.4375rem;  
+}
+
+@media (max-width: 480px) {
+  #app{
+    display: flex;
+    flex-direction: column;
+
+    max-width: 200px !important;
+
+    height: auto;
+    padding-block: 3.75rem;
+    margin-left: 0.62rem;
+    /* margin-top: 100px; */
   }
 }
 
-
 .player h1{
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #E1E1E6;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
   font-weight: bold;
 }
 
 .player p {
   color: #E1E1E6;
   
-  font-size: 19px;
+  font-size: 1.1875rem;
   font-weight: regular;
   opacity: 0.67;
 }
@@ -44,12 +50,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 28px;
+  margin-top: 1.75rem;
 }
 
 .track {
   position: relative;
-  margin-top: 28px;
+  margin-top: 1.75rem;
 }
 
 .track::before {
@@ -66,7 +72,7 @@
 
 .track::after {
   content: '';
-  height: 6px;
+  height: 0.375rem;
   width: 80%;
   display: block;
   background-color: #d9d9d9;
@@ -81,9 +87,9 @@
 .time {
   display: flex;
   justify-content: space-between;
-  margin-top: 9.6px;
+  margin-top: 0.6rem;
   
-  font-size: 14px;
+  font-size: 0.87rem;
   color: #c4c4cc;
   opacity: 0.7;
 
@@ -96,8 +102,8 @@
 }
 
 #player-2 img, #player-3 img {
-  width: 84px;
-  height: 84px;
+  width: 5.25rem;
+  height: 5.25rem;
   object-fit: cover;
 }
 
@@ -107,15 +113,15 @@
 
   display: flex;
   justify-content: center;
-  padding: 29px; 
+  padding: 1.81rem; 
 
-  height: 498px;
-  width: 266px;  
+  height: 31.12rem;
+  width: 16.6rem;  
 }
 
 #player-1 img{
-  height: 189px;
-  width: 189px;
+  height: 11.8rem;
+  width: 11.8rem;
 
   object-fit: cover;
 }
@@ -128,15 +134,15 @@
   align-items: center;
   flex-direction: column;
 
-  width: calc(100% - 2* (38px));
-  height: calc(100% - 2* (38px));
+  width: calc(100% - 2* (2.3rem));
+  height: calc(100% - 2* (2.3rem));
 }
 
 
 .title-player-1{
-  margin-top: 28px;
-  height: 52.6px;
-  width: 189.6px;
+  margin-top: 1.75rem;
+  height: 3.28rem;
+  width: 11.85rem;
 }
 
 
@@ -147,9 +153,9 @@
 
 #player-2 {
   grid-area: B;
-  height: 260px;
-  width: 357px;
-  padding: 29px;
+  height: 16.25rem;
+  width: 22.3rem;
+  padding: 1.81rem;
 
   display: flex;
   flex-direction: column;
@@ -158,9 +164,9 @@
 
 #player-3 {
   grid-area: C;
-  height: 199px;
-  width: 357px;
-  padding: 29px;
+  height: 12.43rem;
+  width: 22.3rem;
+  padding: 1.81rem;
   
   display: flex;
   flex-direction: column;
