--- a/src/style/global.css
+++ b/src/style/global.css
@@ -14,3 +14,13 @@ body * {
     font-family: 'Roboto', sans-serif;
 }
 
+button {
+    border: none;
+    cursor: pointer;
+    background: none;
+}
+
+button :hover {
+    opacity: 0.8;
+}
+
